--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -30,7 +30,7 @@
             android:textSize="20sp" />
     </ScrollView>
 
-    <!--complete (2) Add a TextView that you will show the user if there is an error loading content-->
+    <!--completeD (2) Add a TextView that you will show the user if there is an error loading content-->
 
     <TextView
         android:id = "@+id/error_txt"
@@ -46,12 +46,12 @@
         android:layout_gravity="center"
         android:visibility="invisible"/>
     <!--complete (3) Make the width and the height wrap_content-->
-    <!--complete (4) Give the TextView a default error message stating that an error occurred (use strings.xml)-->
+    <!--completeD (4) Give the TextView a default error message stating that an error occurred (use strings.xml)-->
     <!--complete (5) Set the default visibility of the TextView to invisible-->
 
     <!--complete (12) Add a ProgressBar to show the user content is loading-->
     <!--complete (13) Make the width and height of the ProgressBar 42dp-->
-    <!--complete (14) Set the layout_gravity of the ProgressBar to center-->
+    <!--completeD (14) Set the layout_gravity of the ProgressBar to center-->
     <!--complete (15) Set the default visibility of the ProgressBar to invisible-->
 
 </FrameLayout>
