--- a/app/src/main/res/layout/activity_welcome_view.xml
+++ b/app/src/main/res/layout/activity_welcome_view.xml
@@ -25,21 +25,78 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="164dp"
+        android:fontFamily="@font/arial"
         android:text="iDATEu"
-        android:textSize="50dp"/>
+        android:textSize="50dp"
+        android:textColor="@color/white"/>
 
-    <EditText
-        android:id="@+id/usernameEntry"
+    <TextView
+        android:id="@+id/slogan_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="316dp"
-        android:background="@null"
+        android:layout_marginTop="232dp"
+        android:text="@string/slogan"
+        android:textSize="21dp"
+        android:textColor="@color/white"/>
+
+    <EditText
+        android:id="@+id/usernameInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="292dp"
+        android:background="@drawable/rounded_text_edit"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Username"
+        android:paddingLeft="10dp"
+        android:hint="@string/username_hint"
+        android:textColorHint="@color/transparent_black"
         android:textSize="28dp" />
 
+    <EditText
+        android:id="@+id/passwordInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="342dp"
+        android:background="@drawable/rounded_text_edit"
+        android:ems="10"
+        android:paddingLeft="10dp"
+        android:hint="@string/password_hint"
+        android:textColorHint="@color/transparent_black"
+        android:textSize="28dp" />
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="390dp"
+        android:background="@color/transparent_black"
+        tools:context=".WelcomeView">
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
+        android:ems="5"
+        android:textColor="@color/white"
+        android:layout_weight="1"
+        android:layout_marginLeft="22dp"/>
+
+    <Button
+        android:id="@+id/register_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REGISTER"
+        android:ems="5"
+        android:textColor="@color/white"
+        android:layout_weight="1"
+        android:layout_marginRight="22dp"/>
+    </LinearLayout>
 
 </RelativeLayout>
