--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name ="transparent_black">#444444</color>
+    <color name="white">#f3f3f3</color>
+    <color name="pink">#f95cd7</color>
+
 </resources>
