--- a/app/src/main/res/drawable/rounded_text_edit.xml
+++ b/app/src/main/res/drawable/rounded_text_edit.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle" android:padding="10dp">
-        <solid android:color="@color/white"/>
-        <corners
-            android:bottomRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"/>
-    </shape>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+    <stroke android:width="3dp"
+        android:color="#80FFFFFF" />
+
+    <corners android:radius="25dp" />
+
+    <gradient android:angle="270"
+        android:centerColor="#90150517"
+        android:endColor="#90150517"
+        android:startColor="#90150517" />
+</shape>
