--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name ="transparent_black">#444444</color>
     <color name="white">#f3f3f3</color>
     <color name="pink">#f95cd7</color>
+    <color name="purple">#4717f6</color>
 
 </resources>
