--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#f3f3f3</color>
     <color name="pink">#f95cd7</color>
     <color name="purple">#4717f6</color>
+    <color name="transparent_grey">#DDAAAAAA</color>
 
 </resources>
