--- a/app/src/main/res/layout-land/activity_welcome_view.xml
+++ b/app/src/main/res/layout-land/activity_welcome_view.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -44,16 +48,17 @@
 
     <EditText
         android:id="@+id/usernameInput"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="292dp"
         android:background="@drawable/rounded_text_edit"
-        android:ems="10"
         android:paddingLeft="20dp"
         android:hint="@string/username_hint"
         android:textColorHint="@color/transparent_grey"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:textSize="28sp"
         android:inputType="text"
         android:textColor="@color/white"
@@ -61,13 +66,14 @@
 
     <EditText
         android:id="@+id/passwordInput"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="342dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/rounded_text_edit"
-        android:ems="10"
         android:paddingLeft="20dp"
         android:hint="@string/password_hint"
         android:textColorHint="@color/transparent_grey"
@@ -76,7 +82,7 @@
         android:inputType="textPassword"
         android:textCursorDrawable="@drawable/color_cursor"/>
 
-    
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -119,6 +125,8 @@
         android:layout_marginTop="439dp"
         android:text="Forgot my password"
         android:textColor="@color/white"
-        android:textSize="19sp" />
+        android:textSize="19sp"
+        android:paddingBottom="75dp"/>
 
 </RelativeLayout>
+    </ScrollView>
