--- a/app/src/main/res/layout/activity_over_18_confirm.xml
+++ b/app/src/main/res/layout/activity_over_18_confirm.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
-    tools:context=".Over_18_confirm">
+    tools:context="com.dating.app.idateu.Over_18_confirm">
 
     <TextView
         android:id="@+id/message_txt"
