--- a/app/src/main/res/drawable/color_cursor.xml
+++ b/app/src/main/res/drawable/color_cursor.xml
@@ -3,9 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <size android:width="3dp"
         android:height="7dp"/>
-    <solid android:color="@color/white"  />
+    <solid android:color="@color/transparent_black"  />
 
-    <padding
-        android:top="-5sp"
-        android:bottom="-5sp"/>
 </shape>
