--- a/app/src/main/res/layout-land/activity_welcome_view.xml
+++ b/app/src/main/res/layout-land/activity_welcome_view.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -53,8 +52,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="292dp"
-        android:background="@drawable/rounded_text_edit"
-        android:paddingLeft="20dp"
+        android:background="@drawable/text_edit_mod"
+        android:paddingLeft="5dp"
         android:hint="@string/username_hint"
         android:textColorHint="@color/transparent_grey"
         android:layout_marginLeft="5dp"
@@ -73,8 +72,8 @@
         android:layout_marginTop="342dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/rounded_text_edit"
-        android:paddingLeft="20dp"
+        android:background="@drawable/text_edit_mod"
+        android:paddingLeft="5dp"
         android:hint="@string/password_hint"
         android:textColorHint="@color/transparent_grey"
         android:textSize="28sp"
