--- a/app/src/main/res/layout/activity_third_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_third_sign_up_page.xml
@@ -5,55 +5,107 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pink"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context="com.dating.app.idateu.ThirdSignUpPage">
 
     <EditText
         android:id="@+id/usernameInput"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:background="@color/white"
-        android:hint="Username"/>
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginRight="44dp"
+        android:textCursorDrawable="@drawable/color_cursor"
+        android:paddingLeft="5dp"
+        android:background="@drawable/text_edit_mod"
+        android:hint="Username" />
 
     <EditText
         android:id="@+id/emailInput"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white"
-        android:hint="Email"/>
+        android:layout_marginRight="44dp"
+        android:textCursorDrawable="@drawable/color_cursor"
+        android:paddingLeft="5dp"
+        android:background="@drawable/text_edit_mod"
+        android:hint="Email" />
 
     <EditText
         android:id="@+id/passwordInput"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white"
-        android:hint="Password"/>
+        android:layout_marginRight="44dp"
+        android:textCursorDrawable="@drawable/color_cursor"
+        android:paddingLeft="5dp"
+        android:background="@drawable/text_edit_mod"
+        android:hint="Password" />
 
     <TextView
-        android:layout_width="290dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="5dp"
-        android:text="@string/password_instruction"/>
+        android:layout_marginRight="44dp"
+        android:text="@string/password_instruction"
+        android:textColor="@color/white" />
 
     <EditText
         android:id="@+id/passwordConfirmInput"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="15dp"
-        android:background="@color/white"
-        android:hint="Confirm Password"/>
+        android:layout_marginRight="44dp"
+        android:textCursorDrawable="@drawable/color_cursor"
+        android:paddingLeft="5dp"
+        android:background="@drawable/text_edit_mod"
+        android:hint="Confirm Password" />
 
     <Spinner
         android:id="@+id/gender_selection"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_marginTop="15dp"
-        android:entries="@array/gender_arrays">
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="44dp"
+        android:entries="@array/gender_arrays"
+        android:background="@drawable/text_edit_mod"
+        android:backgroundTint="@color/transparent_black">
     </Spinner>
+
+    <EditText
+        android:id="@+id/date"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/text_edit_mod"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="44dp"
+        android:paddingLeft="5dp"
+        android:hint="Select Date..."
+        android:textCursorDrawable="@drawable/color_cursor"
+        android:layout_marginTop="15dp"
+        android:textColorHint="@color/transparent_grey"/>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/third_page_next_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="NEXT"
+            android:background="@drawable/full_length_button"
+            android:backgroundTint="@color/purple"
+            android:textColor="@color/white"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
