--- a/app/src/main/res/layout/activity_welcome_view.xml
+++ b/app/src/main/res/layout/activity_welcome_view.xml
@@ -49,9 +49,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="292dp"
-        android:background="@drawable/rounded_text_edit"
+        android:background="@drawable/text_edit_mod"
         android:ems="10"
-        android:paddingLeft="20dp"
+        android:paddingLeft="5dp"
         android:hint="@string/username_hint"
         android:textColorHint="@color/transparent_grey"
         android:textSize="28sp"
@@ -66,9 +66,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="342dp"
-        android:background="@drawable/rounded_text_edit"
+        android:background="@drawable/text_edit_mod"
         android:ems="10"
-        android:paddingLeft="20dp"
+        android:paddingLeft="5dp"
         android:hint="@string/password_hint"
         android:textColorHint="@color/transparent_grey"
         android:textSize="28sp"
