--- a/app/src/main/res/layout/activity_third_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_third_sign_up_page.xml
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/third_page_next_button"
+            android:id="@+id/next_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
