--- a/app/src/main/res/layout/activity_welcome_view.xml
+++ b/app/src/main/res/layout/activity_welcome_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent_black"
-    tools:context="com.dating.app.idateu.WelcomeView">
+    tools:context="com.dating.app.idateu.SignUpLogIn">
 
 
     <ImageView
