--- a/app/src/main/res/layout-land/activity_second_sign_up_page.xml
+++ b/app/src/main/res/layout-land/activity_second_sign_up_page.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
@@ -11,34 +13,28 @@
         android:id="@+id/warning_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="90dp"
         android:text="Hold up!"
         android:textColor="@color/white"
         android:textSize="50sp" />
-
-    <CheckBox
-        android:id="@+id/tick_box"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/warning_txt"
-        android:layout_alignStart="@id/warning_txt"
-        android:layout_marginStart="-52dp"
-        android:layout_marginTop="47dp"
-        android:layout_marginRight="2dp" />
 
     <TextView
         android:id="@+id/tap_here_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/warning_txt"
-        android:layout_alignBaseline="@id/tick_box"
-        android:layout_marginTop="48dp"
-        android:layout_centerInParent="true"
-        android:layout_toRightOf="@id/tick_box"
-        android:gravity="center"
-        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:textSize="20sp" />
+
+    <CheckBox
+        android:id="@+id/tick_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tap_here_txt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-34dp"
         android:text="Tap here if you are over 18" />
 
     <Button
@@ -51,4 +47,5 @@
         android:text="Continue"
         android:textColor="@color/white" />
 
-</RelativeLayout>
+
+    </RelativeLayout>
