--- a/app/src/main/res/layout/activity_second_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_second_sign_up_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
-    tools:context="com.dating.app.idateu.SecondSignUpPage">
+    tools:context="com.dating.app.idateu.SignUp_LogIn.SecondSignUpPage">
 
     <TextView
         android:id="@+id/warning_txt"
