--- a/app/src/main/res/layout/matched_pop_up.xml
+++ b/app/src/main/res/layout/matched_pop_up.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="475dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/transparent_black"
+    android:background="@color/purple"
     android:padding="5dp"
     android:layout_gravity="center">
 
@@ -20,6 +20,8 @@
         android:id="@+id/matched_pop_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="blah blah blah"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+        android:text="blah blah blah" />
 
-</LinearLayout>
+</RelativeLayout>
