--- a/app/src/main/res/layout/matched_pop_up.xml
+++ b/app/src/main/res/layout/matched_pop_up.xml
@@ -11,17 +11,22 @@
     <ImageView
         android:id="@+id/matched_pop_up_img"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="50dp"
+        android:scaleType="fitXY"
+        />
 
     <TextView
         android:id="@+id/matched_pop_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/matched_pop_up_img"
         android:text="blah blah blah" />
 
 </RelativeLayout>
