--- a/app/src/main/res/layout/fragment_for_pop_up.xml
+++ b/app/src/main/res/layout/fragment_for_pop_up.xml
@@ -7,8 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".Homepage.Pop_up">
 
-    <FrameLayout
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container"></FrameLayout>
+        android:id="@+id/container">
+    </android.support.v4.view.ViewPager>
+
 </android.support.constraint.ConstraintLayout>
