--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -28,7 +28,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="101dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        />
 
     <Button
         android:id="@+id/userProfile_btn"
@@ -67,5 +68,17 @@
         android:layout_alignParentBottom="true"
         android:background="@drawable/dislike_ripple_effect" />
 
+    <TextView
+        android:id="@+id/username_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/match_pic"
+        android:layout_alignLeft="@id/match_pic"
+        android:layout_alignRight="@id/match_pic"
+        android:gravity="left"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        />
 
 </RelativeLayout>
