--- a/app/src/main/res/layout/matched_pop_up.xml
+++ b/app/src/main/res/layout/matched_pop_up.xml
@@ -20,13 +20,15 @@
         />
 
     <TextView
-        android:id="@+id/matched_pop_txt"
+        android:id="@+id/username_pop_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/matched_pop_up_img"
-        android:text="blah blah blah" />
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
