implementing the login/signup page

--- a/app/src/main/res/layout-land/activity_welcome_view.xml
+++ b/app/src/main/res/layout-land/activity_welcome_view.xml
@@ -46,7 +46,7 @@
 
 
     <EditText
-        android:id="@+id/usernameInput"
+        android:id="@+id/emailInput"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
@@ -54,7 +54,8 @@
         android:layout_marginTop="292dp"
         android:background="@drawable/text_edit_mod"
         android:paddingLeft="5dp"
-        android:hint="@string/username_hint"
+        android:paddingRight="5dp"
+        android:hint="@string/email"
         android:textColorHint="@color/transparent_grey"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -74,6 +75,7 @@
         android:layout_marginRight="5dp"
         android:background="@drawable/text_edit_mod"
         android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:hint="@string/password_hint"
         android:textColorHint="@color/transparent_grey"
         android:textSize="28sp"
