--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="pink">#f95cd7</color>
     <color name="purple">#4717f6</color>
     <color name="transparent_grey">#DDAAAAAA</color>
+    <color name="red">#FF0000</color>
 
 </resources>
