--- a/app/src/main/res/layout/activity_welcome_view.xml
+++ b/app/src/main/res/layout/activity_welcome_view.xml
@@ -130,4 +130,12 @@
         />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/loadingCredentials"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
