--- a/app/src/main/res/layout-land/activity_welcome_view.xml
+++ b/app/src/main/res/layout-land/activity_welcome_view.xml
@@ -128,5 +128,14 @@
             />
     </LinearLayout>
 
+
+    <ProgressBar
+        android:id="@+id/loadingCredentials"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"/>
+
     </RelativeLayout>
     </ScrollView>
