--- a/app/src/main/res/layout-land/activity_welcome_view.xml
+++ b/app/src/main/res/layout-land/activity_welcome_view.xml
@@ -22,6 +22,15 @@
         app:srcCompat="@drawable/logo2"/>
 
     <TextView
+        android:id="@+id/no_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="260dp"
+        android:textColor="@color/red"
+        />
+
+    <TextView
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -129,13 +138,7 @@
     </LinearLayout>
 
 
-    <ProgressBar
-        android:id="@+id/loadingCredentials"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_centerInParent="true"/>
+
 
     </RelativeLayout>
     </ScrollView>
